--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>template-2</title>
 </head>
-<link rel="stylesheet" href="template2.css">
+<link rel="stylesheet" href="style.css">
 
 <body>
 <!---navbar start-->
@@ -32,7 +32,7 @@
 <!--section-2 start-->
 <div class="section-2">
 <div class="sec-2-img">
-    <img src="../free-photo-of-closeup-of-a-pizza-with-sausage-and-onion-slices.jpeg">
+    <img src="./free-photo-of-closeup-of-a-pizza-with-sausage-and-onion-slices.jpeg">
 </div>
 <div class="sec-2-textbox">
     <h1>About catering</h1>
@@ -56,7 +56,7 @@
    <p>tomato sauce,mozarella,pepperoni,basil</p>
 </div>
 <div class="sec-3-image">
-   <img  src="../free-photo-of-closeup-of-a-pizza-with-sausage-and-onion-slices.jpeg">
+   <img  src="./free-photo-of-closeup-of-a-pizza-with-sausage-and-onion-slices.jpeg">
 </div>
 </div>
 <!---section-3 end-->
